--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.3
 Django==3.0
 django-ckeditor==5.9.0
 django-js-asset==1.2.2
+gunicorn==20.0.4
 Pillow==7.0.0
 pytz==2019.3
 sqlparse==0.3.0
